fix skoor to be string in kaabitseja, also include db backup just in case